--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,5 @@
 {
   "buildCommand": "npm run build",
   "outputDirectory": "build",
-  "framework": "vite",
-  "functions": {
-    "api/**": {
-      "runtime": "nodejs18.x"
-    }
-  }
+  "framework": "vite"
 }
