--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
       "name": "Clone Design with Animation",
       "version": "0.1.0",
       "private": true,
-      "dependencies": {
+  "dependencies": {
             "@radix-ui/react-accordion": "^1.2.3",
             "@radix-ui/react-alert-dialog": "^1.1.6",
             "@radix-ui/react-aspect-ratio": "^1.1.2",
@@ -45,8 +45,11 @@
             "sonner": "^2.0.3",
             "tailwind-merge": "*",
             "tailwindcss": "*",
-            "vaul": "^1.1.2"
-      },
+          "vaul": "^1.1.2",
+          "micro": "^10.0.1",
+          "pusher": "^5.1.3",
+          "pusher-js": "^8.4.0"
+  },
       "devDependencies": {
             "@types/node": "^20.10.0",
             "@types/react": "^19.2.7",
